# wsprd

./: .gitignore  README.md
wsprd/: meson.build  wsprd.c
wsprd.xcodeproj/: project.pbxproj
wsprd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
wsprd.xcodeproj/project.xcworkspace/xcuserdata/albin.xcuserdatad/: UserInterfaceState.xcuserstate
wsprd.xcodeproj/xcuserdata/albin.xcuserdatad/xcschemes/: xcschememanagement.plist
